2006-02-02  Sergio Lopez  <koro@sinrega.org>

	* linux/src/drivers/net/apricot.c (apricot_probe): Increase eth_addr
	size to 8 so we do not trash the stack when reading from the io ports.

2006-02-02  Thomas Schwinge  <tschwinge@gnu.org>

	* Makerules.in: Move a comment ...
	* Makefile.in: ... here.

2006-02-01  Thomas Schwinge  <tschwinge@gnu.org>

	* linux/dev/drivers/block/genhd.c (add_bsd_partition): Only define if
	both MACH and CONFIG_BSD_DISKLABEL are defined.
	Reported by Matheus Morais <matheus.morais@gmail.com>.

2006-01-31  Thomas Schwinge  <tschwinge@gnu.org>

	Cleanup of GNU Mach's build system.  The system dependent parts are now
	handled by the respective Makefile and no longer by the top-level one.
	
	* configure, i386/configure, i386/linux/configure, linux/configure:
	Regenerated.

	* Makefile.in: Various cleanups.
	(mach/machine, mach_machine): Targets removed.
	(AWK, CC, CFLAGS, CPPFLAGS, DEFINES, INCLUDES, INSTALL, INSTALL_DATA)
	(INSTALL_PROGRAM, LD, MIG, MIGFLAGS, NM): Variables moved into
	Makerules.in.
	Do not include $(sysdep)/Makefrag anymore.
	(all, check, clean, distclean, mostlyclean, maintainer-clean, install)
	(install-headers, install-kernel): Recurse into the system dependent
	subdirectory.
	(check): Add a basic test using mbchk.
	(clean, distclean): Be more explicit in what to delete.
	($(systype)/%): New target.
	(kernel.o): Incorporate the system dependent archive.
	(installed-sysdep-headers-names, $(installed-sysdep-headers-names)):
	Variable and target moved into the system dependent Makefile.in.
	(install-headers, mkheaderdirs): Don't care for the system dependent
	header files.
	(%.symc, %.symc.o, %.h, %_user.c, %_interface.h, %_server.c): Targets
	moved into Makerules.in.
	Inclusion of dependency files: Likewise.
	(%.migs_d, %.migu_d, %.migsh_d, %.miguh_d, make-deps, %.d): Likewise.
	Include Makerules.
	* Makerules.in: New file, mainly based on Makefile.in.